--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <input
             id="input-field"
             type="text"
-            class="form-control"
+            class="form-control search-field "
             placeholder="Search"
             aria-label="Recipient's username"
             aria-describedby="button-addon2"
