--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             aria-describedby="button-addon2"
           />
           <button class="btn btn-info text-white" type="button" id="search-btn">
-            Button
+            Search
           </button>
         </div>
       </div>
