--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
   <body>
     <header></header>
-    <main class="main">
+    <main>
       <div class="d-flex justify-content-center">
         <div class="input-group my-5 w-25">
           <input
             id="input-field"
             type="text"
-            class="form-control search-field "
+            class="form-control search-field"
             placeholder="Search"
             aria-label="Recipient's username"
             aria-describedby="button-addon2"
@@ -47,20 +47,16 @@
         </div>
       </div>
       <div class="row">
+        <!-- all products -->
         <div class="col-md-9 col-lg-9 col-sm-7">
           <div id="all-products" class=""></div>
         </div>
+        <!-- my cart  -->
         <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
           <div class="cart" id="my-cart">
             <table class="table">
               <thead>
                 <h1>My-Cart</h1>
-                <tr>
-                  <th scope="col"></th>
-                  <th scope="col"></th>
-                  <th scope="col"></th>
-                  <th scope="col"></th>
-                </tr>
               </thead>
               <tbody>
                 <tr>
@@ -92,6 +88,7 @@
             </div>
           </div>
         </div>
+        <!-- my cart end -->
       </div>
     </main>
     <footer></footer>
