--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <body>
     <header></header>
     <main>
+      <!-- search area -->
       <div class="d-flex justify-content-center">
         <div class="input-group my-5 w-25">
           <input
